# vdi-server

./: .flake8  .gitignore  .gitlab-ci.yml  LICENSE  Pipfile  README.md  Untitled.ipynb  Untitled1.ipynb  Vagrantfile  _vagrant.sh  asyncio_utils.ipynb  broker_private.pem  cached_prop.ipynb  http_client.ipynb  import_disk.ipynb  init_vagrant.py  manage.sh  notes.txt  prepare.py  quickstart.md  releasenotes  run.sh  serial.key  sqhema.sql  thin_client_doc.md  vagrant.py  vagrant.sh  vagrantfile  ws2.ipynb
_gtasks/: g_tasks.py
desktop-client-c/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README.md  README.txt  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  mingw-virt-viewer.spec.in  virt-viewer.spec.in
desktop-client-c/data/: Makefile  Makefile.am  Makefile.in  remote-viewer.appdata.xml  remote-viewer.appdata.xml.in  remote-viewer.desktop  virt-viewer-mime.xml  virt-viewer.wxs  virt-viewer.wxs.in
desktop-client-c/doc/: css_style.css  shared_folders_setup.txt  start_vdi_client.sh  usefull_references.txt  veil_client_settings.ini
desktop-client-c/doc/rdp_data/: rdp_template_file.txt
desktop-client-c/icons/: Makefile  Makefile.in
desktop-client-c/icons/16x16/: Makefile  Makefile.in
desktop-client-c/icons/22x22/: Makefile  Makefile.in
desktop-client-c/icons/24x24/: Makefile  Makefile.am  Makefile.in
desktop-client-c/icons/256x256/: Makefile  Makefile.in
desktop-client-c/icons/32x32/: Makefile  Makefile.in
desktop-client-c/icons/48x48/: Makefile  Makefile.in
desktop-client-c/man/: Makefile  Makefile.am  Makefile.in  remote-viewer.1  remote-viewer.pod  virt-viewer.1  virt-viewer.pod
desktop-client-c/po/: .intltool-merge-cache  Makefile  Makefile.in  POTFILES  POTFILES.in  af.gmo  af.po  am.gmo  am.po  anp.gmo  anp.po  ar.gmo  ar.po  as.gmo  as.po  ast.gmo  ast.po  bal.gmo  bal.po  be.gmo  be.po  bg.gmo  bg.po  bn.gmo  bn.po  bn_IN.gmo  bn_IN.po  bo.gmo  bo.po  br.gmo  br.po  brx.gmo  brx.po  bs.gmo  bs.po  ca.gmo  ca.po  cs.gmo  cs.po  cy.gmo  (+156 more)
desktop-client-c/resources/: virt-viewer.gresource.xml
desktop-client-c/resources/ui/: remote-viewer-connect_veil.ui  remote-viewer-connect_veil.ui~  remote-viewer-iso-list.ui  start_settings_form.ui  vdi_manager_form.ui  vdi_manager_form.ui~  virt-viewer-about.ui  virt-viewer-auth.ui  virt-viewer-guest-details.ui  virt-viewer-preferences.ui  virt-viewer-preferences.ui~  virt-viewer.ui  virt-viewer_veil.ui  virt-viewer_veil.ui~
desktop-client-c/src/: CMakeLists.txt  Makefile.am  Makefile.in  crashhandler.c  main.c  ovirt-foreign-menu.c  remote-viewer-connect.c  remote-viewer-connect.h  remote-viewer-iso-list-dialog.c  remote-viewer-main.c  remote-viewer-timed-revealer.c  remote-viewer-util.c  remote-viewer-util.h  remote-viewer.c  remote-viewer.h  remote_viewer_start_settings.c  remote_viewer_start_settings.h  vdi_api_session.c  vdi_api_session.h  vdi_manager.c  vdi_manager.h  vdi_vm_widget.c  vdi_vm_widget.h  virt-viewer-app.c  virt-viewer-app.h  virt-viewer-auth.c  virt-viewer-display-spice.c  virt-viewer-display-spice.h  virt-viewer-display-vnc.c  virt-viewer-display-vnc.h  virt-viewer-display.c  virt-viewer-enums.c  virt-viewer-enums.h  virt-viewer-file-transfer-dialog.c  virt-viewer-file-transfer-dialog.h  virt-viewer-file.h  virt-viewer-main.c  virt-viewer-notebook.c  virt-viewer-resources.c  virt-viewer-resources.h  (+14 more)
desktop-client-c/src/.deps/: libvirt_viewer_la-ovirt-foreign-menu.Plo  libvirt_viewer_la-remote-viewer-iso-list-dialog.Plo  libvirt_viewer_la-virt-viewer-app.Plo  libvirt_viewer_la-virt-viewer-auth.Plo  libvirt_viewer_la-virt-viewer-display-spice.Plo  libvirt_viewer_la-virt-viewer-display.Plo  libvirt_viewer_la-virt-viewer-enums.Plo  libvirt_viewer_la-virt-viewer-file-transfer-dialog.Plo  libvirt_viewer_la-virt-viewer-file.Plo  libvirt_viewer_la-virt-viewer-notebook.Plo  libvirt_viewer_la-virt-viewer-resources.Plo  libvirt_viewer_la-virt-viewer-session-spice.Plo  libvirt_viewer_la-virt-viewer-session.Plo  libvirt_viewer_la-virt-viewer-timed-revealer.Plo  libvirt_viewer_la-virt-viewer-vm-connection.Plo  libvirt_viewer_la-virt-viewer-window.Plo  libvirt_viewer_util_la-virt-viewer-util.Plo  remote_viewer-remote-viewer-connect.Po  remote_viewer-remote-viewer-main.Po  remote_viewer-remote-viewer.Po  virt_viewer-virt-viewer-main.Po  virt_viewer-virt-viewer.Po
desktop-client-c/src/.libs/: libvirt-viewer-util.la  libvirt-viewer.la
desktop-client-c/src/rdp_viewer/: rdp_channels.c  rdp_channels.h  rdp_client.c  rdp_client.h  rdp_cursor.c  rdp_cursor.h  rdp_data.h  rdp_display.c  rdp_display.h  rdp_viewer.c  rdp_viewer.h  rdp_viewer_window.c  rdp_viewer_window.h  windows_rdp_launcher.c  windows_rdp_launcher.h
desktop-client-c/src/resources/: resources.c  virt-viewer.gresource.xml
desktop-client-c/src/utility/: async.c  async.h  crashhandler.c  crashhandler.h  jsonhandler.c  jsonhandler.h  settingsfile.c  settingsfile.h
desktop-client-c/src/vdi_client/: vdi_api_session.c  vdi_api_session.h  vdi_manager.c  vdi_manager.h  vdi_pool_widget.c  vdi_pool_widget.h  vdi_redis_client.c  vdi_redis_client.h  vdi_vm_widget.c  vdi_vm_widget.h  vdi_ws_client.c  vdi_ws_client.c.t31047  vdi_ws_client.h
desktop-client-c/src/virt_viewer/: ovirt-foreign-menu.h  remote-viewer-connect.c  remote-viewer-connect.h  remote-viewer-iso-list-dialog.h  remote-viewer-main.c  remote-viewer.c  virt-viewer-app.c  virt-viewer-app.h  virt-viewer-auth.c  virt-viewer-auth.h  virt-viewer-display-spice.c  virt-viewer-display.c  virt-viewer-display.h  virt-viewer-file-transfer-dialog.c  virt-viewer-file.c  virt-viewer-notebook.c  virt-viewer-resources.c  virt-viewer-session-spice.c  virt-viewer-session-spice.h  virt-viewer-session-vnc.c  virt-viewer-session.c  virt-viewer-timed-revealer.c  virt-viewer-util.c  virt-viewer-util.h  virt-viewer-vm-connection.c  virt-viewer-window.c  virt-viewer.c
desktop-client-c/tests/: Makefile  Makefile.am  Makefile.in  redirect-test.c  test-hotkeys.c  test-monitor-alignment.c  test-monitor-mapping.c  test-version-compare.c
(+2770 files in other folders)
